feat: Implement robust cancellation, state handling, and rebranding
This commit introduces several major improvements and bug fixes:

- Implements a robust cancellation mechanism for API requests.
- Fixes state management issues related to localStorage and asynchronous operations.
- Rebrands the application to "SOW Forge" and updates content accordingly.
- Adds a "Read" modal for previewing generated content with proper Markdown rendering.
- Adds a "Reset Prompts" feature to reload default prompts.
- Configures the project for Netlify deployment.

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>SOW Forge by D3 Alpha</title>
+    <meta name="description" content="AI-powered Statement of Work generator by D3 Alpha." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   </head>
   <body>
